# learn_rust

./: README.md
Rust_Tutorial_Full_Course/check_back/: borrow_checker_issues.rs
Rust_Tutorial_Full_Course/python_rust/: compare  compare.py  compare.rs
Rust_Tutorial_Full_Course/rust_tutorial/src/: first_8-lessons.rs  main.rs  second_3_lessons.rs
Rust_Tutorial_Full_Course/rust_tutorial/src/show_info/: mod.rs
Rust_Tutorial_Full_Course/rust_tutorial_2/: Cargo.toml  test_lines.txt
Rust_Tutorial_Full_Course/rust_tutorial_2/src/: main.rs
lets_get_rusty/: Cargo.toml
lets_get_rusty/src/: common_programming_concept.md  guesss_random_number.rs  main.rs  test.py
rust-lang_book_Lets-get-rusty/: Cargo.toml  README.md
rust-lang_book_lets-get-rusty/src/: main.rs
rust_basics/: Cargo.toml  README.md
rust_basics/src/: main.rs  variables  variables.rs
web-development-with-rust/: README.md
web-development-with-rust/chatapp/: Cargo.toml
web-development-with-rust/to-do/: .env  Cargo.toml  docker-compose.yaml
web-development-with-rust/to-do/deployment/: database.sql  docker-compose.yaml
web-development-with-rust/to-do/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  modules.rs
